ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dokuwiki
spec:
  rules:
  - host: dokuwiki.192.168.99.100.nip.io
    http:
      paths:
      - backend:
          serviceName: dokuwiki
          servicePort: 80
